# TCC_DairyColletor

./: .dockerignore  .gitignore  500perguntasgadoleite_G-RAG.tsv  Dockerfile  crawler_logs  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: core.py  logger.py
api/collector/: api.py  core.py
api/collector/core/: basic_async_crawler.py  basic_crawler_client.py  collect.py  constants.py  extract.py  jds_crawler.py  mdpi_crawler.py  pubmed_client.py  semantic_school_client.py  util.py
api/collector/utils/: constants.py
api/downloads/: .org.chromium.Chromium.i8Gvgq
api/modelo/: chatgpt_api.py  core.py  evaluation_answers.py  groq_api.py  ollama_api.py  test_evaluation.py
api/modelo/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
api/modelo/agents/: base_aiagent.py  chatgpt_api.py  groq_api.py  ollama_api.py  unsloth_api.py
api/modelo/test/: bartscore.py  bertscore.py  (+8 more)
api/pdf_extractor/: api.py  core.py
api/utils/: clean_text.py  save_csv.py
rag/: custom_rag.py  pyproject.toml  run_rag.py
rag/chroma_db_ollama/071e5023-5b5d-4898-a5b9-99834544e5d1/: index_metadata.pickle
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  unsloth_compiled_module_gpt_oss.py  unsloth_compiled_module_siglip.py
(+28 files in other folders)
