[project]
name = "tcc-dairycolletor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bert-score>=0.3.13",
    "curl-cffi>=0.14.0",
    "dotenv>=0.9.9",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "mosestokenizer>=1.2.1",
    "nltk>=3.9.2",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "parsel>=1.10.0",
    "pydantic-core>=2.41.5",
    "rouge-score>=0.1.2",
    "selenium>=4.38.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "unsloth>=2026.1.4",
]
