[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-ollama>=1.0.0",
    "lightrag-hku>=1.4.9.4",
    "pypdf>=6.1.2",
]
